<resources>
    <string name="app_name"> \t\t চাঁপাইনবাবগঞ্জ জেলা </string>
    <string name="about_nil">জেলা পরিচিতি </string>
    <string name="visiting_place">দর্শনীয় স্থান্সমুহ </string>
    <string name="heritage">জেলার ঐতিহ্য </string>
    <string name="visiting">দর্শনীয় স্থানসমূহ </string>
    <string name="purakriti">পুরাকীর্তিসমুহ</string>
    <string name="persons">প্রখ্যাত ব্যক্তিত্ব </string>
    <string name="vougolik">ভোগোলিক অবস্থান </string>
    <string name="others">অন্যান্য </string>
    <string name="Ismail_developer">Md. Ismail \nBSc in CSE \nHSTU, Dinajpur \nMobile: +8801743557172\n mail: ismailcse14@gmail.com</string>
    <string name="hello_blank_fragment">
১।আয়তন ১৭০২.৫৬ বর্গকিলোমিটার
২।ভৌগলিক অবস্থান
২৪°২২"'"  থেকে ২৪°৫৭"'" উত্তর অক্ষাংশ এবং ৮৭°২০"'"  থেকে ৮৮°২৩"'" পূর্ব দ্রাঘিমাংশ।
পূর্বে:রাজশাহী জেলার গোদাগাড়ী উপজেলা ও নওগাঁ জেলার নিয়ামতপুর এবং পোরশা উপজেলা।
পশ্চিমে:ভারতের মালদহ জেলা ও পদ্মা নদী
উত্তরে:ভারতের মালদহ জেলা
দক্ষিণে:পদ্মা নদী ও ভারতের মুর্শিদাবাদ জেলা
\n
৩।নির্বাচনী এলাকা ৩টি
৪৩-চাঁপাইনবাবগঞ্জ-১ (শিবগঞ্জ)
৪৪-চাঁপাইনবাবগঞ্জ-২ (নাচোল, ভোলাহাট ও গোমস্তাপুর)
৪৫-চাঁপাইনবাবগঞ্জ-৩ (সদর)
৪।জনসংখ্যা ১৬,৪৭,৫২১ জন
৫।মোট ভোটার সংখ্যা
(পুরুষ ও মহিলা) মোট: ১০,৬৯,১৩৬ জন
পুরুষ: ৫,৩৩,১০১ জন
মহিলা: ৫,৩৬,০৩৫ জন
৬।শিক্ষার হার ৬৬%
৭।উপজেলা ০৫ টি (চাঁপাইনবাবগঞ্জ সদর, শিবগঞ্জ, গোমস্তাপুর, নাচোল ও ভোলাহাট)
৮।পৌরসভা ০৪ টি (চাঁপাইনবাবগঞ্জ, শিবগঞ্জ, রহনপুর ওনাচোল পৌরসভা)
৯।ইউনিয়ন৪৫ টি
১০।মৌজা ৭৮৭ টি
১১। গ্রাম ১,২৯৪ টি
১২।নদী০৪ টি (পদ্মা, মহানন্দা, পুনর্ভবা ও পাগলা নদী)
১৩।নদী পথের দৈর্ঘ্য ৪৩.৯১ কিলো মিটার (সারাবছর), ২১২.৩৮ কিলোমিটার (বর্ষাকাল)
১৪। বিল৪১ টি
১৫।মসজিদ ৪,৬৮০ টি
১৬।এনজিও ৯৮ টি
১৭।খাদ্য গুদাম০৬ টি
১৮।খাদ্য গুদামের ধারণ ক্ষমতা১৬,০০০ মেট্রিক টন
১৯।ব্যাংক২৩ টি (মোট শাখা ৭২ টি)
২০।টেলিফোন এক্সচেঞ্জ০৬ টি (চাঁপাইনবাবগঞ্জ, মহারাজপুর, শিবগঞ্জ, রহনপুর, নাচোল, ভোলাহাট)

২১।সিনেমা হল০৩ টি
২২।ডাকঘর৮৫ টি (বড় ১৩টি এবং ছোট ৭২ টি)
শিক্ষা প্রতিষ্ঠানঃ
২৩।বিশ্ববিদ্যালয়০১ টি (এক্সিম ব্যাংক কৃষি বিশ্ববিদ্যালয়)
২৪।মহাবিদ্যালয়৪৮ টি (সরকারি ৩ টি, বেসরকারি ৪৫ টি)
২৫।স্কুল এণ্ড কলেজ০৯ টি
২৬।মাধ্যমিক বিদ্যালয়
২২৪ টি (সরকারি ৪ টি, বেসরকারি ২২০ টি)
২৭।নিম্ন মাধ্যমিক বিদ্যালয়১৯ টি
২৮।সরকারি প্রাথমিক বিদ্যালয়৩৭০ টি
২৯।জাতীয়করণকৃত প্রাথমিক বিদ্যালয়৩২৭ টি
৩০।মাদ্রাসা১৩৫ টি
31।স্বতন্ত্র এবতেদায়ী মাদ্রাসা১৮ টি
৩২।মাদ্রাসা সংলগ্ন এবতেদায়ী মাদ্রাসা১৩৩ টি
৩৩।পলিটেকনিক ইনস্টিটিউট০৬ টি
৩৪।পিটিআই০২ টি (নবাবগঞ্জ ও দাদনচক ফজলুল হক, শিবগঞ্জ)
কৃষি বিভাগঃ
৩৫।মোট জমির পরিমাণ১,৭০,৪৮৩.০০ হেক্টর
৩৬।আবাদী জমির পরিমাণ১,৩৪,৭৯৮.০০ হেক্টর
৩৭।সেচযোগ্য জমির পরিমাণ১,১৯,৩২১.০০ হেক্টর
৩৮।গভীর নলকূপ১,৬৮৭ টি
৩৯।অগভীর নলকূপ১৪,৪১২ টি
৪০।শক্তিচালিত পাম্প২,৬৯৭ টি
৪১।উপজেলা ভূমি অফিস০৫ টি (চাঁপাইনবাবগঞ্জ সদর, শিবগঞ্জ, গোমস্তাপুর, নাচোল ও ভোলাহাট)
৪২।ইউনিয়ন ভূমি অফিস৪৫ টি
৪৩।পৌর ভূমি অফিস০২ টি
৪৪।বন্দোবস্তকৃত খাস জমি (কৃষি)১২৭৫০.৪৭২৯ একর
৪৫।অবশিষ্ট খাস জমি১৮২.৯০০৬ একর
৪৬।মোট আদর্শ গ্রাম১৪ টি
৪৭।আশ্রয়ন প্রকল্প০৮ টি (০৪টি ফেইজ-২ ও ০৪টি আশ্রয়ন প্রকল্প)
৪৮।সায়রাত মহল২,৪৬০ টি
৪৯। জলমহাল২০একরের উর্ধে২৯টি এখাত হতে সরকারের রাজস্ব আয় প্রায় ৩.৫ কোটি টাকা
৫০।হাট বাজার৯৪ টি

</string>
    <string name="ek_nojore">সংক্ষিপ্ত\nবিবরণ</string>
    <string name="potvumi">পটভূমি</string>
    <string name="upzila">উপজেলা</string>
    <string name="union">ইউনিয়ন</string>
    <string name="mancitro">মানচিত্রে চাঁপাইনবাবগঞ্জ</string>
    <string name="abc">এক নজরে চাঁপাইনবাবগঞ্জ</string>
    <string name="vst_dtl">
    বাংলাদেশের উত্তর-পশ্চিমাঞ্চলের সীমান্ত ঘেষা প্রাচীন শহর নীলফামারী জেলার। নীল চাষের জন্য উর্বর হওয়ায় এখানে বেশি সংখ্যায় নীলকুঠি ও নীল খামার গড়ে ওঠে। আর নীল খামার থেকে বর্তমানের নীলফামারী। ধর্মপালের রাজবাড়ি/গড়, ময়নামতি দুর্গ, ভীমের মায়ের চুলা, ডিমলা রাজবাড়ী, হরিশচন্দ্রের পাঠ, সৈয়দপুরের চিনি মসজিদ, তিস্তা ব্যারেজ ও সেচ প্রকল্প, নীলফামারী জাদুঘর, কুন্দুপুকুর মাজার, দুন্দিবাড়ী স্লুইসগেট, বাসার গেট, ও তিন বিঘা করিডোর ও দহগ্রাম-আংগরপোতা ছিটমহল বেড়ানোর জন্য বেশ জনপ্রিয়।

    </string>
    <string name="harischandra_head">হরিশ্চন্দ্রের পাঠ: </string>
    <string name="kundopukur_head">কুন্দ পুকুর মাজার  নীলফামারী:  </string>
    <string name="cini_head"> চিনি মসজিদ: </string>
    <string name="dhormopal_head">ধর্মপালের গড়:  </string>
    <string name="nilsagor_head">নীলসাগর  নীলফামারী:  </string>
    <string name="harischandra_path">\n নীলফামারী জলঢাকা থানার খুটামারা ইউনিয়নের অন্তর্গত পাথর খন্ডে পরিপূর্ণ সুপ্রাচীন ধ্বংসাবশেষ টিলা হরিশচন্দ্রের পাঠ বা রাজবাড়ী(Harishchandra Padh/ Rajbari)। এটি চাড়াল কাটা নদীর দক্ষিণ তীরে প্রায় এক বিঘা জমির উপর উঁচু ঢিবি। ঢিবির উপর পাঁচ খন্ড বড় কাল পাথর জড়ে আছে। পাথরগুলো ঢিবির মাটিতে ডুবে যায় আবার ভেসে উঠে বলে পার্শ্ববর্তী স্থানের অধিবাসীদের বিশ্বাস।হরিশচন্দ্র পাঠ বাংলাদেশের নীলফামারী জেলার জলঢাকা উপজেলার খুটামারা ইউনিয়নের একটি গ্রাম। একে সেখানকার রাজা হরিশচন্দ্রের নাম অনুসারে গ্রামটির নামকরণ করা হয়। রাজা হরিশচন্দ্র দানবীর হিসেবে পরিচিত ছিলেন। এ অঞ্চলে তাকে নিয়ে অনেক পালাগান,যাত্রাপালা রচিত হয়েছে। কথিত আছে রাজা হরিশ্চন্দ্রের কন্যা অধুনা’র সাথে রাজা গোপী চন্দ্রের বিয়ে হয়। তৎকালীন প্রথা অনুসারে গোপী চন্দ্র দান হিসেবে তার ছোট শ্যালিকা পদুনাকেও পান। এ নিয়েও অনেক গল্প প্রচলিত আছে।হরিশচন্দ্র পাঠ গ্রামে অনেক প্রাচীন ধ্বংসাবশেষ আজও তার স্মৃতি বহন করছে। হরিশচন্দ্রের শিবমন্দিরে বছরে ৩টি উৎসব এই মন্দিরকে ঘিরে বেশ ধুমধাম করে পালিত হয়। \n\n কিভাবে যাবেনঃ নীলফামারী শহর থেকে সড়কপথে জলঢাকা উপজেলার খুটামারা ইউনিয়নের হরিশ্চন্দ্র পাঠে যাওয়া যায়।</string>
    <string name="kundpukur">\n নীলফামারী সদর উপজেলার কুন্দুপুকুর ইউনিয়নে ’কুন্দুপুকুর মাজার’(Kunda Pokur Mazar) অবস্থিত। সূদুর পারস্য হতে এ এলাকায় ইসলাম ধর্ম প্রচারের জন্য হযরত মহিউদ্দিন চিশ্তি (রাঃ) আসেন। ইসলামের এ মহান সাধকের মাজার‘ কুন্দুপুকুর মাজার’ হিসাবে পরিচিত । জেলা সদর থেকে দুরত্ব ৫ কিঃমিঃ। এখানে একটি মসজিদ, একটি হেফজখানা, একটি বড় পুকুর আছে। হেফজখানায় ১৭ জন ছাত্র হেফজ করছেন। প্রতি বছর ৫ মাঘ এখানে বার্ষিক ওরশ হয়। ওরশে দূর দুরান্ত থেকে অসংখ্য ভক্ত এখানে আসেন। নীলফামারী সদর উপজেলা পরিষদের চেয়ারম্যানকে সভাপতি করে ৫ সদস্যের এডহক কমিটি মাজার পরিচালনা করছেন। কিভাবে যাওয়া যায়ঃ নীলফামারী শহর থেকে সড়কপথে কুন্দপুকুর মাজার শরীফে যাওয়া যায়।</string>
    <string name="cini_mosque">\n নীলফামারী সৈয়দপুর বাংলাদেশের প্রাচীন শহরগুলোর মধ্যে একটি। ব্যবসা বানিজ্যের জন্য এই শহরটি অনেক আগে থেকেই প্রসিদ্ধ এছাড়াও রেলের শহর হিসেবেও এটি পরিচিত। এই শহরের দুর্লভ একটি স্হাপত্য হচ্ছে সৈয়দপুরের চিনি মসজিদ(Chini Mosjid) বা চীনা মসজিদ। চিনি মসজিদের রয়েছে সুদীর্ঘ ইতিহাস,১৮৬৩ সালে হাজী বাকের আলী ও হাজী মুকু ইসলামবাগ ছন ও বাঁশ দিয়ে একটি মসজিদ নির্মান করেন। পরবর্তীতে এলাকাবাসীর সহায়তায় টিন দিয়ে এটি রূপান্তরিত করা হয়।এলাকার মানুষেরা মাসিক আয়ের একটি অংশ দিয়ে মসজিদের জন্য ফাণ্ড গঠন করে। পরবর্তীতে শঙ্কু নামের এক হিন্দু ব্যক্তি দৈনিক ১০ আনা মজুরীতে মসজিদ নতুনভাবে নির্মান শুরু করেন। এলাকাবাসী স্বেচ্ছাশ্রমের মাধ্যমে তাকে সাহায্য করতে থাকেন। মসজিদের গাত্রে চিনামাটির থালার ভগ্নাংশ, কাঁচের ভগ্নাংশ বসিয়ে ইট ও সুরকি দিয়ে নির্মান কাজ করা হতে থাকে। এই পদ্ধতিকে বলা হয়ে থাকে চিনি করা বা চিনি দানার কাজ করা। এ থেকেই এই মসজিদের নাম চিনি মসজিদ বা চীনা মসজিদ। চীনা মাটির থালার ভগ্নাংশ দিয়ে গোটা মসজিদ মোড়ানো বলে একে অনেকেই চীনা মসজিদও বলে থাকে। আর এই চিনামাটির তৈজসপত্র নিয়ে আসা হয়েছিল কলকাতা থেকে। মসজিদ নকশা করেন মো. মোখতুল ও নবী বক্স। মসজিদের অনন্য কারুকার্যে সত্যিই মুগ্ধ হতে হয়। ফুলদানি, ফুলের ঝাড়, গোলাপফুল, একটি বৃন্তে একটি ফুল, চাঁদ তারা মসজিদের গাত্রে খঁচিত রয়েছে। এছাড়াও মুগ্ধ হতে হয় তত্কালিন আরবীয় ক্যালিপ্ট্রা দেখে। এ মসজিদ তৈরিতে প্রচুর মার্বেল পাথর ব্যবহার করা হয়েছে। চিনি মসজিদের সৌন্দয্য দেশ বিদেশের প্রচুর পর্যটককে আকর্ষন করে বলেই তারা ছুটে আসেন। নিজ চোখে না দেখলে চিনি মসজিদের সৌন্দর্য উপলব্ধি করা যাবে না। এ মসজিদের পিছনেই রয়েছে খ্রিষ্টানদের প্রাচীন একটি কবরস্হান।  কিভাবে যাবেনঃ ঢাকা থেকে নীলসাগর এক্সপ্রেস ট্রেনে সরাসরি সৈয়দপুরে চলে আসতে পারবেন। ট্রেনের ভাড়াও খুবই অল্প। এছাড়াও গাবতলী, কলেজগেট, মহাখালি থেকে সৈয়দপুর সরাসরি অনেকগুলো বাস সার্ভিস চালু আছে। এছাড়াও বিমানযোগে সরাসরি সৈয়দপুরে চলে আসতে পারেন। সৈয়দপুরে ইউনাইটেড এয়ারওয়েজ ও বেঙ্গল এয়ারওয়েজ এর বেসরকারি বিমান সপ্তাহে দু’দিন চালু আছে।</string>
    <string name="dhormo_paler">\n নীলফামারী: পাল বংশের প্রতিষ্ঠাতা গোপাল পালের (৭৯৫ খ্রিঃ) মৃত্যুর পর তাঁর পুত্র ধর্মপাল রাজ সিংহাসনে আরোহণ করেন। তিনি জলঢাকা উপজেলার উত্তর পশ্চিমে প্রায় ২০ কিঃ মিঃ দুরে তাঁর রাজধানী স্থাপন করেন। বহিঃশক্রর হাত থেকে রক্ষার জন্য মাটির প্রাচীর দ্বারা তিনি রাজধানীকে বেষ্টিত করেন। সেই থেকে এ স্থানের নাম হয় গড়ধর্মপাল(Dharmapal Gor)। এ স্থান থেকে প্রায় ১ মাইল পূর্বে তার রাজধানীর ধ্বংসাবশেষ ও প্রায় ৩৩ বিঘা পরিমিত চন্দনপাঠের দীঘি আজো তার স্মৃতি বহন করছে। বর্তমানে এ ধ্বংসাবশেষের কোল ঘেঁষে গড়ধর্মপাল নামে আবাসন প্রকল্প গড়ে উঠেছে। অবস্থানঃ  ডোমার রেল স্টেশন থেকে আনুমানিক ৫ মাইল পূর্ব-দক্ষিণ দেওনাই নদীর পূর্বতীরে গড় ধর্মপাল নামক গ্রামে এ গড়টি অবস্থিত৷ জলঢাকা উপজেলা থেকেও যাওয়া যায় সহজে ; যেতে হলে অটো রিক্সা করে আর ১৪/১৫ কিলো মিটার দূরে গড়ের হাট নামক জায়গায় গেলেই এই ধর্মপালের গড়ের অবস্থান পাবেন ।</string>
    <string name="nil_sagor">\n নীলসাগর(Nilsagar) একটি ঐতিহাসিক দিঘি, যা বর্তমানে নীলফামারী জেলা সদর থেকে উত্তর-পশ্চিম কোণে ১৪ কিমিঃ দূরত্বে গোড়গ্রাম ইউনিয়নে অবস্থিত৷। মনে করা হয়, ঐতিহাসিক বৈদিক রাজা বিরাট এই দিঘি খনন করেন এবং তা বিরাট দিঘি হিসাবে পরিচিত ছিল৷ পরবর্তীকালে বিন্না দিঘি নামেও পরিচিতি পায়। স্বাধীনতার পর নীলসাগর নামে ব্যাপক পরিচিতি লাভ করে এবং বর্তমানে এখানে ব্যাপক সংস্কার করে ভ্রমণ পিপাসুদের চিত্তবিনোদনের ব্যবস্থা করা হয়েছে। প্রতি বত্সর শীত মৌসুমে অসংখ্য অতিথি পাখির সমাগম ঘটে এই নীলসাগরে। আনুমানিক খ্রিস্টপূর্ব অষ্টম শতাব্দীর কোন এক সময়ে এ জলাশয়টির খননকাজ শুরু হয়েছিল। নীল সাগর ‘বিরাট দিঘি’ ও ‘বিন্না দিঘি’ নামেও পরিচিত। হিন্দুশাস্ত্রমতে, খ্রিস্টপূর্ব নবম হতে অষ্টম শতাব্দীতে পান্ডবরা কৌরবদের চক্রান্তের শিকার হয়ে ১২ বছরের বনবাস ও ১ বছরের অজ্ঞাতবাসে যেতে বাধ্য হন এবং মৎস্য দেশের রাজা বিরাটের রাজধানীর এ স্থানটিতে ছদ্মবেশে বসবাস শুরু করেন। মনে করা হয়, সেসময় নির্বাসিত পাণ্ডবদের তৃষ্ণা মেটাতে বৈদিক রাজা বিরাট এ দিঘিটি খনন করেছিলেন। বিরাট দিঘির অপভ্রংশ হিসেবে কালক্রমে এ দিঘিটি বিরাট দিঘি, বিল্টা দিঘি এবং অবশেষে বিন্না দিঘি হিসেবে পরিচিতি লাভ করে। কারো কারো মতে, রাজা বিরাট তার বিশাল গরুর পালের জন্য পানির সংস্থান করতেই এ দিঘি খনন করেন এবং তার কন্যা বিন্নাবতীর নামে এর নামকরণ করেন। পরবর্তীতে ১৯৭৯ সালে নীলফামারীর তৎকালীন মহকুমা প্রশাসক ও অবসর প্রাপ্ত সচিব এম.এ জব্বার কর্তৃক এই দিঘিকে পর্যটনক্ষেত্র হিসেবে পরিচিত করতে কিছু পদক্ষেপ গ্রহণ করা হয় ও নীলফামারীর নামানুসারে বিন্না দিঘির পরিবর্তে এর নামকরণ করা হয় নীলসাগর।  নীলসাগরের আকর্ষণঃ প্রাকৃতিক সৌন্দর্যের জন্যই মূলত নীলসাগর বিখ্যাত। এর পাড়ে রয়েছে নারকেল, বনবাবুল, আকাশমণি, মেহগনি, শিশুসহ অজানা-অচেনা হরেকরকম ফুল ও ফলের সারি সারি বৃক্ষরাজি। শীতকালে বিভিন্ন দেশের রাজহাঁস, মার্গেঞ্জার, মাছরাঙা, ভুবনচিল, সবুজ চান্দি ফুটকি, বাচাল নীল ফুটকি ইত্যাদি অতিথি পাখিদের সমাগমও বৃদ্ধি পায়, এছাড়াও পাশেই রয়েছে একটি ছোট পার্ক। ১৯৯৮ সালে এ এলাকাকে পাখির অভয়ারণ্য ঘোষণা করা হয়। ১৯৯৯ সালে তৎকালীন ভূমি মন্ত্রণালয়ের প্রতিমন্ত্রী আলহাজ্ব রাশেদ মোশারফ এ অভয়ারণ্যের উদ্বোধন করেন। এখানে প্রতি বছর চৈত্রসংক্রান্তি উপলক্ষে সনাতন (হিন্দু) সম্প্রদায় বারুণী স্নান উৎসবের আয়োজন করে থাকে। দিঘির পাশেই সরকারের অনুদানে একটি রেস্টহাউজ স্থাপন করা হয়েছে। অবস্থানঃ  সদর উপজেলার জিরো পয়েন্ট চৌরঙ্গী মোড় থেকে উত্তর-পশ্চিম কোণে ১৪ কিলোমিটার দূরে গোড়গ্রাম ইউনিয়নের ধোবাডাঙ্গা মৌজায় ৫৩.৯০ একর জমির ওপর নীলসাগরের অবস্থান। এর জলভাগ ৩২.৭০ একর, এবং চারদিকের পাড়ের জমির পরিমাণ ২১ একরের মতো।</string>
    <string name="vst_head">নীলফামারী জেলার দর্শনীয় স্থানঃ </string>
</resources>