<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#adf"
    android:orientation="vertical"
    tools:context=".Visiting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">
            <TextView
                android:textSize="30dp"
                android:textColor="#a0d"
                android:text="@string/vst_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vst_dtl" />


            <TextView
                android:text="@string/harischandra_head"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="#00a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/harischanra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harischandra_path" />

            <TextView
                android:text="@string/kundopukur_head"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="#00a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/kundopukur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kundpukur" />


            <TextView
                android:text="@string/cini_head"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="#00a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/cini_mosque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cini_mosque" />


            <TextView
                android:text="@string/dhormopal_head"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="#00a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/dhormo_pal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />




            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dhormo_paler" />

            <TextView
                android:text="@string/nilsagor_head"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="#00a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nil_sagor" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>